--- a/angular.json
+++ b/angular.json
@@ -28,10 +28,10 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/font-awesome/css/font-awesome.min.css",
+              "./node_modules/@fortawesome/fontawesome-free/css/all.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-              "src/styles.scss"
+              "./src/styles.scss"
             ],
             "scripts": []
           },
